<resources>

    <string name="facebook_app_id" translatable="false">1782711141950556</string>

    <string name="app_name">Game Trading</string>
    <string name="search_button">Search</string>
    <string name="link_to_login_message">Already a member? Login</string>
    <string name="name_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="creating_account_dialog_message">Creating account...</string>
    <string name="invalid_email_messsage">Invalid Email</string>
    <string name="invalid_password_message">Password too short</string>
    <string name="signing_dialog_message">Sign In...</string>
    <string name="link_to_signup_message">Don\'t have an Account ? Sign up</string>
    <string name="logout_menu">Logout</string>
    <string name="sign_in_button">Sign In</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="game_title_label">game title</string>
    <string name="search_hint">Search game</string>
    <string name="search">Search</string>
    <string name="no_games_found_message">No results found for \"%1$s\".</string>
    <string name="no_games_found_alert">Please check you have the right spelling, or try different keywords.</string>
    <string name="search_games_message">Search games by title</string>

    <string name="want_game_text">Want</string>
    <string name="offer_game_text">Offer</string>
    <string name="sell_game_text">Sell Game</string>
    <string name="game_description">Description</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras nunc felis, finibus non odio et, congue volutpat enim. Nunc euismod ex a nibh luctus vehicula. Phasellus gravida suscipit ex a eleifend. Fusce sodales congue ante et gravida. Quisque iaculis erat ut feugiat malesuada. Nullam commodo quam eget ultricies dignissim. Aenean ut justo quis ex posuere efficitur. Quisque dignissim pellentesque ligula. Morbi feugiat orci nisi, vel egestas metus consequat non. Nullam eget libero id purus euismod faucibus nec eu turpis.</string>
    <string name="action_filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="lorem_ipsum_small" translatable="false">Lorem ipsum</string>
</resources>
