<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/want_game_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:layout_toLeftOf="@+id/offer_game_button"
            android:layout_toStartOf="@+id/offer_game_button"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/want_game_text"
            android:textColor="@color/white"
            android:theme="@style/ButtonTheme"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/offer_game_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/offer_game_text"
            android:theme="@style/ButtonTheme"/>

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/game_description"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/game_description_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        tools:text="@string/lorem_ipsum"/>
</LinearLayout>